# soap

./: .gitignore  README.md  pyproject.toml
soap/: app.py  library.py  main.py  shell.py
soap/cli/: init.py  library.py
soap/db/: documents.py  sqlite.py
soap/ingest/: extract.py  fetch.py  identifiers.py  merge.py  url.py
soap/models/: document.py
soap/tui/: __init__.py  app.py  app.tcss  review.py  themes.py  widgets.py
tests/: conftest.py  test_add.py  test_ingest.py
